Fixed style bug on mobile.

--- a/static/scss/_uploader_mobile.scss
+++ b/static/scss/_uploader_mobile.scss
@@ -2,6 +2,7 @@
   .uploader {
     padding-bottom: 0;
     .container {
+      min-height: 440px;
       height: 60vh;
       width: 90vw;
       .uploader-file-container {
